--- a/src/Register.css
+++ b/src/Register.css
@@ -66,3 +66,16 @@
 .register-box a:hover {
   text-decoration: underline;
 }
+
+.submitted-details {
+            margin-top: 20px;
+            padding: 15px;
+            border: 1px;
+            border-radius: 10px;
+            background-color: #f9f9f9;
+            text-align: center;
+            max-width: 400px;
+            margin-left: auto;
+            margin-right: auto;
+        
+}
