--- a/src/Cart.css
+++ b/src/Cart.css
@@ -14,3 +14,15 @@
   display: flex;
   flex-direction: column;
 }
+
+.quantity-control {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.quantity-control button {
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
