--- a/src/Cart.css
+++ b/src/Cart.css
@@ -1,5 +1,8 @@
 .cart-container {
   padding: 20px;
+  flex: 1; 
+  display: flex;
+  flex-direction: column;
 }
 
 .cart-item {
@@ -38,6 +41,7 @@
   justify-content: center;
   gap: 20px;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .cart-actions button {
