--- a/src/Login.css
+++ b/src/Login.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 90vh;
+  padding: 40px 0; 
 }
 
 .login-box {
@@ -20,7 +20,7 @@ body {
   width: 320px;
   display: flex;
   flex-direction: column;
-  gap: 10px; /* reduced from 15px to 10px */
+  gap: 10px;
 }
 
 .login-box h2 {
@@ -32,7 +32,7 @@ body {
 
 .login-box label {
   font-size: 16px;
-  margin-bottom: 0px; /* removed spacing below label */
+  margin-bottom: 0px;
   font-weight: 500;
 }
 
@@ -41,7 +41,8 @@ body {
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin-bottom: 8px; /* Optional: add small space between input and next label */
+  margin-bottom: 8px;
+  margin-top: 0px;
 }
 
 .login-btn {
@@ -77,11 +78,6 @@ body {
 
 .login-box p {
   font-size: 16px;
-  margin-bottom: 0px; 
+  margin-bottom: 0px;
   font-weight: 500;
-}
-
-.login-box input {
-  margin-top: 0px;   
-  margin-bottom: 8px; 
 }
