--- a/src/Register.css
+++ b/src/Register.css
@@ -1,12 +1,12 @@
 .register-container {
   display: flex;
   justify-content: center;
-  padding-top: 120px;   
-  padding-bottom: 80px; 
-
+  align-items: center;
+  flex-grow: 1;
+  min-height: calc(100vh - 120px); 
   background-color: #f0f0f0;
-  min-height: 100vh;  
-  box-sizing: border-box; 
+  box-sizing: border-box;
+  padding: 20px 0; 
 }
 
 .register-box {
@@ -68,14 +68,13 @@
 }
 
 .submitted-details {
-            margin-top: 20px;
-            padding: 15px;
-            border: 1px;
-            border-radius: 10px;
-            background-color: #f9f9f9;
-            text-align: center;
-            max-width: 400px;
-            margin-left: auto;
-            margin-right: auto;
-        
+  margin-top: 20px;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  text-align: center;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
